ggplot2 0.9 (2009-XX-XX) ----------------------------------------

New features

* trans_log1p: new log + 1 transformer contributed by Jean-Olivier Irisson

Bug fixes

* aesthetics: fixed bug when overriding aesthetics with NULL
* annotate: adds layers with legend = FALSE
* coord_equal: correctly place tick marks (Fixes #61)
* documentation: usage statements should now be spread over multiple lines
* fortify.SpatialPolygonsDataFrame: fixed bug when region variable had missing values
* legend: don't try and display legend when unnecessary scale added
* legend: text labels now correctly left-aligned when non-numeric
* order aesthetic now correctly affects position adjustments  (Fixes #70)
* scale_date and scale_date_time now work with infinite positions
* scales were not getting automatically added in many situations (Fixes #69)
* stat_contour: fix error if x or y coordinates were negative
* stat_qq: always use sorted data (rather than interpolated quantiles) on sample axis.  This makes it behave more like qqnorm
* stat_quantile: correctly group results