@@ -11,11 +11,13 @@ ScaleDatetime <- proto(ScaleDate, {
   
   common <- c("x", "y")
   
-  new <- function(., name=NULL, limits=NULL, major=NULL, minor=NULL, format=NULL, variable="x", tz = "") {
+  new <- function(., name=NULL, limits=NULL, major=NULL, minor=NULL, format=NULL, expand=c(0.05, 0), variable="x", tz = "") {
     
     trans <- Trans$find("datetime")
     limits <- trans$transform(limits)
-    .$proto(.input=variable, .output=variable, major_seq=major, minor_seq=minor, format=format, name=name, .tr=trans, limits = limits, tz=tz)
+    .$proto(name=name, .input=variable, .output=variable, 
+      major_seq=major, minor_seq=minor, format=format, .expand = expand, 
+      .tr=trans, limits = limits, tz=tz)
   }
   
   break_points <- function(.) {
